<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/selectionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_question"
            android:padding="10dp"
            android:text="@string/question1"
            android:textColor="@android:color/white" />

        <RadioGroup
            android:id="@+id/rgOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbOption1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/question1_option1"
                android:textColor="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rbOption2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/question1_option2"
                android:textColor="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rbOption3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/question1_option3"
                android:textColor="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rbOption4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/question1_option4"
                android:textColor="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rbOption5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/question1_option5"
                android:textColor="@color/colorPrimary" />
        </RadioGroup>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_button_green"
            android:drawableRight="@drawable/ic_keyboard_arrow_right"
            android:text="@string/next"
            android:padding="5dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_button_orange"
            android:drawableRight="@drawable/ic_done"
            android:text="@string/done"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/your_total_score_is"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvResultScore"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_question"
            android:gravity="center"
            android:padding="20dp"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvResultInvestorType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_red"
            android:drawableRight="@drawable/ic_done"
            android:padding="5dp"
            android:text="@string/show"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>